--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Привет, мир!</title>
+  <title>corporationgondwana</title>
   <style>
 
     #myDiv {
@@ -9,6 +9,7 @@
       margin: 0 25%; /* Отступы по 25% слева и справа на компьютере */
       height: 100vh; /* Высота блока на мобильном устройстве на весь экран */
       background-color: #f2f2f2;
+      padding: 5px; /* Отступы внутри блока на 5 пикселей */
     }
 
     @media only screen and (max-width: 1000px) {
@@ -17,14 +18,15 @@
         margin: 0; /* Обнуляем отступы на мобильном устройстве */
         height: 100vh; /* Высота блока на мобильном устройстве на весь экран */
         background-color: #f2f2f2;
+        padding: 5px; /* Отступы внутри блока на 5 пикселей */
       }
     }
   </style>
 </head>
 <body>
   <div id="myDiv">
-    <h1>Привет, мир!</h1>
-    <p>Это моя первая HTML-страница.</p>
+    <h1>сайт corporationgondwana</h1>
+    <p>Пока пусто</p>
   </div>
 </body>
 </html>
