--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       margin: 0 25%; /* Отступы по 25% слева и справа на компьютере */
       height: 100vh; /* Высота блока на мобильном устройстве на весь экран */
       background-color: #f2f2f2;
+      padding: 10px; /* Отступы внутри блока на 5 пикселей */
     }
 
     @media only screen and (max-width: 1000px) {
@@ -17,6 +18,7 @@
         margin: 0; /* Обнуляем отступы на мобильном устройстве */
         height: 100vh; /* Высота блока на мобильном устройстве на весь экран */
         background-color: #f2f2f2;
+        padding: 10px; /* Отступы внутри блока на 5 пикселей */
       }
     }
   </style>
