--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
   <div id="myDiv">
     <h1>сайт corporationgondwana</h1>
     <p>Пока пусто</p>
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M17.152 0c4.35 0 7.848 3.54 7.848 7.89 0 3.468-2.197 6.407-5.257 
+                 7.544l-.186.04-.057.21c-.35 1.376-1.093 3.084-1.964 4.83-.587.98-1.025 
+                 1.674-1.997 1.674-.34 0-.654-.096-.952-.287-.41-.253-.687-.544-1.066-1.058l-.19-.235-.27-.04c-1.322-.238-2.473-.897-3.383-1.993A6.914 
+                 6.914 0 0 1 .167 10.95C.974 8.12 3.59 6.072 6.88 6.072c.542 0 1.094.08 
+                 1.638.24 1.15.42 2.072 1.342 2.495 2.494.16.54.238 1.092.238 1.635 
+                 0 3.385-2.95 6.003-6.656 6.003-.196 0-.38-.017-.578-.036A7.756 
+                 7.756 0 0 1 2.21 22.91a8.026 8.026 0 0 1-1.327-2.152A7.817 7.817 0 
+                 0 1 .08 18.839c-.013-3.184 2.36-5.81 5.437-6.355-.273-.472-.426-.976-.426-1.52 
+                 0-.246.045-.488.14-.72-.182-.13-.33-.284-.453-.462-.77-1-2-1.65-3.42-1.65-1.792 
+                 0-3.27 1.19-3.27 2.52 0 .22.026.44.08.64C.552 12.6.25 13.96.25 15.33 
+                 .25 18.93 3.596 22.25 7.138 22.25h.01c3.723 0 7.375-2.88 7.375-7.384 
+                 0-.432-.07-.87-.225-1.29.495-.6.78-1.35.78-2.118 
+                 C15.02 3.563 12.437 1 9.082 1v.02a7.5 7.5 0 0 0-1.872.23C6.355 1.06 
+                 6.733.16 7.368.238c1.308-.662 2.547-.997 3.784-1.338A6.963 6.963 0 0 1 
+                 13.16 0h4.992z"></path>
+    </svg>
   </div>
 </body>
 </html>
