--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>corporationgondwana</title>
+  <title>Corporation Gondwana</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 
     #myDiv {
@@ -25,7 +26,7 @@
 </head>
 <body>
   <div id="myDiv">
-    <h1>сайт corporationgondwana</h1>
+    <h1>сайт Corporation Gondwana</h1>
     <p>Пока пусто</p>
   </div>
 </body>
