--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 </head>
 <body>
   <div id="myDiv">
-    <h1>сайт Corporation Gondwana</h1>
-    <p>Пока пусто</p>
+    <p>Corporation Gondwana</p>
   </div>
 </body>
 </html>
