--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 <body>
   <div id="myDiv">
     <p>Corporation Gondwana</p>
+
+    <p>- Паблик Вконтакте</p>
+    <p>- Телетайп</p>
+    <p>- Пинтерест</p>
+    <p>- Бот</p>
+    <p>- Беседв Вконтакте</p>
+    <p>- Создатель</p>
+    <p>- О нас</p>
+    <p>- Ютуб</p>
   </div>
 </body>
 </html>
