--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </head>
 <body>
   <div id="myDiv">
-    <p>Corporation Gondwana</p>
+    <p style="text-align: center;">Corporation Gondwana</p>
+    <p></p>
 
     <p>- Паблик Вконтакте</p>
     <p>- Телетайп</p>
