--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div id="myDiv">
     <p style="text-align: center;">Corporation Gondwana</p>
-    <p> </p>
+    <p style="text-align: center;">...</p>
 
     <p>- Паблик Вконтакте</p>
     <p>- Телетайп</p>
