--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     #myDiv {
       background-color: white; /* Покрасьте блок в белый цвет */
-      margin: 0 25%; /* Отступы по 25% слева и справа на компьютере */
+      margin: 0 30%; /* Отступы по 25% слева и справа на компьютере */
       height: 100vh; /* Высота блока на мобильном устройстве на весь экран */
       background-color: #f2f2f2;
       padding: 10px; /* Отступы внутри блока на 5 пикселей */
@@ -27,7 +27,7 @@
 <body>
   <div id="myDiv">
     <p style="text-align: center;">Corporation Gondwana</p>
-    <p style="text-align: center;">...</p>
+    <p style="text-align: center;">----</p>
 
     <p>- Паблик Вконтакте</p>
     <p>- Телетайп</p>
