--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p>- Телетайп</p>
     <p>- Пинтерест</p>
     <p>- Бот</p>
-    <p>- Беседв Вконтакте</p>
+    <p>- Беседа Вконтакте</p>
     <p>- Создатель</p>
     <p>- О нас</p>
     <p>- Ютуб</p>
