--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         background-color: #a9b38f;
         padding: 10px; /* Отступы внутри блока на 5 пикселей */
       }
+      p {
+        font-size: 100%;
+      }
+
     }
   </style>
 </head>
